# Airport_Ground_Control

./: Airport_Ground_Control_Report.docx  Airport_Ground_Control_Report.html  Airport_Ground_Control_Report.md  CMakeLists.txt  README.md  build_sim.sh
main/: Airport_Control.cpp  airplane.txt  input_data.txt  main.cpp
main/include/: Airport_Control.hpp  Conflict_Avoidance.hpp  FlightInfo.hpp  Landing_Control.hpp  Landing_Queue.hpp  MaintenanceCheck.hpp  ParkingQueue.hpp  Takeoff_Control  Takeoff_Queue.hpp  Taxiway_Control.hpp
